searchbar working, placed modal popup on search page, alignment of details on selected page needs fixing for small devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -60,6 +60,9 @@ footer{
 .searchbar{
     height:45px;
 }
+#globalSearch{
+    margin-top:5px;
+}
 .smoke{
     background: url("../img/smoke.jpg");
     background-size: cover;
@@ -885,6 +888,14 @@ nav.nav-extended .nav-wrapper {
     padding:0;
     margin:0;
 }
+@media screen and (max-width: 768px){
+    .recipe-details{
+        height: 50px;
+        padding:0;
+        margin:0;
+    }
+}
+
 
 /*---------------------------------------------------------------------------------------- Store */
 
@@ -1096,4 +1107,9 @@ footer i:hover{
 /*-------------------------------------------------------------------------Admin----*/
 .wrapEdit{
     min-height:400px;
+}
+/*------------------------------------------------------------------------Search Page--*/
+.modalRecipeImage{
+    max-width:100%;
+    height:auto;
 }
